test/analyze/type_check/tuple/non_int_literal_index.myte
module test

type Tup (Int, String)

fun main() {
  val x: (Int, String) = (1, "str");
  val y: Tup = Tup (1, "str");

  (x[true]: Unit);
  (y[true]: Unit);

  (x[()]: Unit);
  (y[()]: Unit);

  (x[1 + 2]: Unit);
  (y[1 + 2]: Unit);

  (x["a"]: Unit);
  (y["a"]: Unit);
}